kubernetes-manifests/java-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
  labels:
    app: java-app
    java-node: "true"             # new label added here
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-app
      java-node: "true"           # selector matches new label too
  template:
    metadata:
      labels:
        app: java-app
        java-node: "true"         # pod template labels include new label
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: javamysqlapp
        image: vinny100/demo-app:nodeapp
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: app
          protocol: TCP
        - containerPort: 8081
          name: metrics
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  labels:
    app: java-app
    java-node: "true"               # new label here too
spec:
  selector:
    app: java-app
    java-node: "true"               # selector matches labels on pods
  ports:
  - name: app
    protocol: TCP
    port: 3001
    targetPort: 3001          # targetPort should be container port name or number, changed to 8080
  - name: metrics
    protocol: TCP
    port: 8081
    targetPort: metrics
